Se trabaja en la habilitacion para facturar desde Inicio de Sesion y modificar empresa.

--- a/SistemaLaObra/SistemaLaObra/packages.config
+++ b/SistemaLaObra/SistemaLaObra/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.SqlServer.SqlManagementObjects" version="140.17199.0" targetFramework="net452" />
   <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
+  <package id="PDFsharp" version="1.50.5147" targetFramework="net452" />
   <package id="Stony.GoogleMaps.Geocoding" version="0.2.1" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.113.1" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.113.1" targetFramework="net452" />
