--- a/SistemaLaObra/SistemaLaObra/App.config
+++ b/SistemaLaObra/SistemaLaObra/App.config
@@ -5,9 +5,13 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="SistemaLaObra.Properties.Settings.LaObraConnectionString" connectionString="Data Source=EZEQUIEL\SQL;Initial Catalog=LaObra;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="SistemaLaObra.Properties.Settings.CadenaDeConexionLaObra" connectionString="Data Source=PC-EZEQUIEL\SQLEXPRESS;Initial Catalog=LaObra;Integrated Security=True" />
-    <add name="SistemaLaObra.Properties.Settings.notebookConexion" connectionString="Data Source=DESKTOP-BDPG71E\SQLEXPRESS;Initial Catalog=LaObra;Integrated Security=True" />
+    <add name="SistemaLaObra.Properties.Settings.LaObraConnectionString"
+      connectionString="Data Source=DESKTOP-3EIOFOR\SQLEXPRESS;Initial Catalog=LaObra;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="SistemaLaObra.Properties.Settings.CadenaDeConexionLaObra"
+      connectionString="Data Source=PC-EZEQUIEL\SQLEXPRESS;Initial Catalog=LaObra;Integrated Security=True" />
+    <add name="SistemaLaObra.Properties.Settings.notebookConexion"
+      connectionString="Data Source=DESKTOP-BDPG71E\SQLEXPRESS;Initial Catalog=LaObra;Integrated Security=True" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
