--- a/SistemaLaObra/SistemaLaObra/App.config
+++ b/SistemaLaObra/SistemaLaObra/App.config
@@ -6,12 +6,13 @@
   </configSections>
   <connectionStrings>
     <add name="SistemaLaObra.Properties.Settings.LaObraConnectionString"
-      connectionString="Data Source=DESKTOP-3EIOFOR\SQLEXPRESS;Initial Catalog=LaObra;Integrated Security=True"
+      connectionString="Data Source=EZEQUIEL\SQL;Initial Catalog=LaObra;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="SistemaLaObra.Properties.Settings.CadenaDeConexionLaObra"
       connectionString="Data Source=PC-EZEQUIEL\SQLEXPRESS;Initial Catalog=LaObra;Integrated Security=True" />
     <add name="SistemaLaObra.Properties.Settings.notebookConexion"
       connectionString="Data Source=DESKTOP-BDPG71E\SQLEXPRESS;Initial Catalog=LaObra;Integrated Security=True" />
+    <add name="SistemaLaObra.Properties.Settings.nuevaCadena" connectionString="Data Source=DESKTOP-3EIOFOR\SQLEXPRESS;Initial Catalog=LaObra;Integrated Security=True" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
